MaxPermSize removed from UI in compile server jvm settings, omitted for java 8 #SCL-7939 fixed